# overfitting_club

./: .gitignore
blog/: _quarto.yml  about.qmd  agents.qmd  deep_learning.qmd  index.qmd  mlops.qmd  papers.qmd  thoughts.qmd  tutorials.qmd
blog/_pending/papers/: index.html
blog/_pending/tutorials/agents/: index.html  index.qmd
blog/_pending/tutorials/deep_learning/multivariate_regression/: multivariate_regression_tf.qmd
blog/_pending/tutorials/mlops/: index.html
blog/_pending/tutorials/post-with-code/: index.html
blog/_site/: about.html  agents.html  deep_learning.html  index.html  listings.json  mlops.html  papers.html  search.json  thoughts.html  tutorials.html
blog/_site/assets/: styles.css
blog/_site/posts/papers/: index.html
blog/_site/posts/thoughts/welcome/: index.html
blog/_site/posts/tutorials/agents/: index.html
blog/_site/posts/tutorials/deep_learning/multivariate_regression/: multivariate_regression_tf.html
blog/_site/posts/tutorials/mlops/: index.html
blog/_site/posts/tutorials/post-with-code/: index.html
blog/docs/: about.html  deep_learning.html  index.html  papers.html  search.json  thoughts.html
blog/posts/papers/: index.qmd
blog/posts/thoughts/welcome/: index.qmd
blog/posts/tutorials/deep_learning/multivariate_regression/: README.md  multivariate_regression_tf.ipynb  multivariate_regression_tf.qmd  pyproject.toml
blog/posts/tutorials/mlops/: index.qmd
docs/: CNAME  agents.html  listings.json  mlops.html  tutorials.html
docs/assets/: styles.css
docs/posts/thoughts/welcome/: index.html
(+1 files in other folders)
