[project]
name = "multivariate-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub[pandas-datasets]>=0.3.13",
    "matplotlib>=3.10.6",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.18,<2.19",
    "tensorflow-metal>=1.2.0 ; sys_platform == 'darwin'",
]
